Passed code through SonarQube and improved exception handling and method return practices